video sizing playing around

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,23 @@ body {
 p {
     margin: 1em auto;
 }
+
+#containingBlock {
+	width: 50%;
+}
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+
+
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	/*height: 100%;*/
+}
