--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,28 @@ p {
 	height: 0;
 }
 
+* html .videoWrapper {
+	margin-bottom: 45px;
+	margin-bot\tom: 0;
+}
+
+.videoWrapper div,
+.videoWrapper iframe,
+.videoWrapper object {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+.wideScreen {
+  padding-bottom: 56.25%;
+}
 
 iframe {
-	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	/*height: 100%;*/
+	height: 100%;
 }
