--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ p {
     margin: 1em auto;
 }
 
-#containingBlock {
+/*#containingBlock {
 	width: 50%;
 }
 
@@ -64,4 +64,4 @@ iframe {
 	left: 0;
 	width: 100%;
 	height: 100%;
-}
+}*/
